stderr
FizzBuzzerTest.java:15: error: ';' expected
        assertEquals(100,FizzBuzzer.answer().size())
                                                    ^
1 error
